manifests/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-tailscale
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: prometheus
      port:
        name: http
  tls:
    - hosts:
        - prometheus
